ensure that this only happens when a merge occurs to main

--- a/.github/workflows/mirror.yml
+++ b/.github/workflows/mirror.yml
@@ -1,9 +1,11 @@
 name: Mirroring
 
 on: [push, delete]
+  branches:
+    -'main'
 
 jobs:
-  to_gitlab:
+  mirror-to-private:
     runs-on: ubuntu-latest
     steps:                                              # <-- must use actions/checkout before mirroring!
       - uses: actions/checkout@v3
