--- a/.github/workflows/mirror.yml
+++ b/.github/workflows/mirror.yml
@@ -1,6 +1,6 @@
 name: Mirroring
 
-on: 
+on:
   push:
     branches:
       - main
@@ -8,13 +8,11 @@ on:
 jobs:
   mirror-to-private:
     runs-on: ubuntu-latest
-    steps:                                              # <-- must use actions/checkout before mirroring!
+    steps:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0
       - uses: pixta-dev/repository-mirroring-action@v1
         with:
-          target_repo_url:
-            git@github.com:jrang188/pulumi-infra.git
-          ssh_private_key:                              # <-- use 'secrets' to pass credential information.
-            ${{ secrets.GH_SSH_PRIVATE_KEY }}
+          target_repo_url: git@github.com:jrang188/pulumi-infra.git
+          ssh_private_key: ${{ secrets.GH_SSH_PRIVATE_KEY }}
