--- a/.github/workflows/get-oci-vm.yml
+++ b/.github/workflows/get-oci-vm.yml
@@ -3,7 +3,7 @@ name: Pulumi Up
 on:
   schedule:
     - cron: '*/5 * * * *'
-  workflow_dispatch:  # Optional: allows manual triggering
+  workflow_dispatch: # Optional: allows manual triggering
 
 jobs:
   pulumi:
@@ -15,9 +15,11 @@ jobs:
         with:
           python-version: 3.13
       - run: pip install -r requirements.txt
+        working-directory: oci/infra
       - uses: pulumi/actions@v6
         with:
           command: up
           stack-name: dev # When using an individual account, only use stack-name.
+          work-dir: oci/infra
         env:
           PULUMI_ACCESS_TOKEN: ${{ secrets.PULUMI_ACCESS_TOKEN }}
