--- a/oci/infra/requirements.txt
+++ b/oci/infra/requirements.txt
@@ -1,2 +1,13 @@
-pulumi==3.60.0
-pulumi-oci==0.13.0
+arpeggio==2.0.2
+attrs==25.3.0
+debugpy==1.8.13
+dill==0.3.9
+grpcio==1.66.2
+parver==0.5
+pip==25.0.1
+protobuf==4.25.6
+pulumi==3.158.0
+pulumi-oci==2.27.0
+pyyaml==6.0.2
+semver==3.0.4
+six==1.17.0
