--- a/.github/workflows/get-oci-vm.yml
+++ b/.github/workflows/get-oci-vm.yml
@@ -11,10 +11,16 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+      - name: Install uv
+        uses: astral-sh/setup-uv@v5
+      - name: Set up Python
+        run: uv python install
       - uses: actions/setup-python@v5
+        working-directory: oci/infra
         with:
-          python-version: 3.13
-      - run: pip install -r requirements.txt
+          python-version-file: "pyproject.toml"
+      - name: Install the project
+        run: uv sync --all-extras --dev
         working-directory: oci/infra
       - uses: pulumi/actions@v6
         with:
